Agregar estructura y estilos para la página "Dónde alojarse" con menú de navegación y pie de página

--- a/pages/donde_alojarse.html
+++ b/pages/donde_alojarse.html
@@ -15,7 +15,73 @@
 </head>
 
 <body>
-    <h1>Página en proceso</h1>
+    <div class="container-extenso">
+        <header>
+            <a href="../index.html">
+                <figure>
+                    <img src="../img/mascara.png" alt="Logo de RioMagico">
+                </figure>
+            </a>
+            <nav class="desktop-menu">
+                <ul>
+                    <li><a href="atracciones.html">Atracciones</a></li>
+                    <li><a href="donde_comer.html">Dónde comer</a></li>
+                    <li><a href="donde_alojarse.html">Dónde alojarse</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+            <!-- Responsive -->
+            <input type="checkbox" id="checkbox">
+            <label for="checkbox" class="toggle">
+                <span class="bars" id="bar1"></span>
+                <span class="bars" id="bar2"></span>
+                <span class="bars" id="bar3"></span>
+            </label>
+            <nav class="mobile-menu">
+                <ul>
+                    <li style="--i:1"><a href="atracciones.html">Atracciones</a></li>
+                    <li style="--i:2"><a href="donde_comer.html">Dónde comer</a></li>
+                    <li style="--i:3"><a href="donde_alojarse.html">Dónde alojarse</a></li>
+                    <li style="--i:4"><a href="blog.html">Blog</a></li>
+                    <li style="--i:5"><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
+
+    <!-- TODO:Empezar con el contenido de alojamiento -->
+
+    <footer>
+        <div class="container">
+            <figure>
+                <img src="../img/mascara.png" alt="Logo de RioMagico">
+            </figure>
+
+            <div class="redesSociales">
+                <h3>Siguenos</h3>
+                <figure>
+                    <img src="../img/icon/facebook.svg" alt="Icono de Facebook">
+                    <img src="../img/icon/instagram.svg" alt="Icono de Instagram">
+                    <img src="../img/icon/x.svg" alt="Icono de X(ex Twiter)">
+                    <img src="../img/icon/tiktok.svg" alt="Icono de TikTok">
+                </figure>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="info-alumno">
+                <ul>
+                    <li>Apellido y nombre: Tito Valentín</li>
+                    <li>Nombre de la materia: Maquetado y desarrollo web</li>
+                    <li>Docente a cargo: Carlos Ferrer</li>
+                    <li>AVISO: entrega para un TP de primer cuatrimestre de la Escuela Da Vinci con el año actual.</li>
+                </ul>
+            </div>
+        </div>
+
+        <span class="copyright">© 2025 All Rights Reserved Developed by in.</span>
+    </footer>
 </body>
 
 </html>
