--- a/pages/donde_comer.html
+++ b/pages/donde_comer.html
@@ -15,7 +15,172 @@
 </head>
 
 <body>
-    <h1>Página en proceso</h1>
+    <div class="container-extenso">
+        <header>
+            <a href="../index.html">
+                <figure>
+                    <img src="../img/mascara.png" alt="Logo de RioMagico">
+                </figure>
+            </a>
+            <nav class="desktop-menu">
+                <ul>
+                    <li><a href="atracciones.html">Atracciones</a></li>
+                    <li><a href="donde_comer.html">Dónde comer</a></li>
+                    <li><a href="donde_alojarse.html">Dónde alojarse</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+            <!-- Responsive -->
+            <input type="checkbox" id="checkbox">
+            <label for="checkbox" class="toggle">
+                <span class="bars" id="bar1"></span>
+                <span class="bars" id="bar2"></span>
+                <span class="bars" id="bar3"></span>
+            </label>
+            <nav class="mobile-menu">
+                <ul>
+                    <li style="--i:1"><a href="atracciones.html">Atracciones</a></li>
+                    <li style="--i:2"><a href="donde_comer.html">Dónde comer</a></li>
+                    <li style="--i:3"><a href="donde_alojarse.html">Dónde alojarse</a></li>
+                    <li style="--i:4"><a href="blog.html">Blog</a></li>
+                    <li style="--i:5"><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
+
+    <div class="container-corto">
+        <section>
+            <h1>Descubre la gastronomía carioca</h1>
+            <p>Río de Janeiro no solo es famosa por sus playas y paisajes, sino también por su deliciosa gastronomía.
+                Desde platos tradicionales brasileños hasta opciones internacionales, la ciudad ofrece una amplia
+                variedad de sabores que deleitarán tu paladar.</p>
+            <article>
+                <h2>Feijoada</h2>
+                <p>La feijoada es un guiso tradicional hecho con porotos negros, carne de cerdo (como chorizo, costillas
+                    y oreja) y embutidos. Se sirve con arroz blanco, farofa (harina de mandioca tostada), rodajas de
+                    naranja y col rizada salteada. Es uno de los platos más emblemáticos de Brasil.</p>
+                <figure><img src="" alt=""></figure>
+            </article>
+            <article>
+                <h2>Pão de Queijo</h2>
+                <p>Pequeños pancitos redondos elaborados con almidón de mandioca y mucho queso (generalmente Minas). Son
+                    crocantes por fuera, esponjosos por dentro y muy consumidos en desayunos y meriendas.</p>
+                <figure><img src="" alt=""></figure>
+            </article>
+            <article>
+                <h2>Moqueca</h2>
+                <p>Guiso de pescado o mariscos cocido lentamente con leche de coco, cebolla, morrón, tomate y aceite de
+                    dendê (palma africana). Tiene sabor suave pero exótico. Se sirve caliente con arroz y farofa.</p>
+                <figure><img src="" alt=""></figure>
+            </article>
+            <article>
+                <h2>Coxinha</h2>
+                <p>Una de las comidas callejeras más populares: masa crocante en forma de gota, rellena con pollo
+                    desmenuzado y condimentos. Se fríe hasta dorar y muchas veces viene con requesón.</p>
+                <figure><img src="" alt=""></figure>
+            </article>
+            <article>
+                <h2>Acarajé</h2>
+                <p>Bollo frito hecho con porotos fradinho molidos, relleno con camarones secos, vatapá (puré de pan,
+                    maní y especias) y vinagreta. Típico de la cocina afrobrasileña, muy consumido en ferias y fiestas.
+                </p>
+                <figure><img src="" alt=""></figure>
+            </article>
+            <article>
+                <h2>Bolinho de Bacalhau</h2>
+                <p>Croquetas de bacalao salado mezclado con papas y perejil. Se fríen hasta quedar doradas y crujientes.
+                    Se sirven como entrada o en reuniones informales.</p>
+                <figure><img src="" alt=""></figure>
+            </article>
+            <article>
+                <h2>Tapioca</h2>
+                <p>Tortilla blanca hecha con harina de mandioca hidratada. Se cocina directo en sartén y se rellena con
+                    ingredientes dulces (coco, chocolate, leche condensada) o salados (queso, jamón, pollo). Sin gluten
+                    y muy versátil.</p>
+                <figure><img src="" alt=""></figure>
+            </article>
+            <article>
+                <h2>Pastel de feira</h2>
+                <p>Empanada rectangular y fina frita en aceite, con rellenos variados como carne, queso, pollo con
+                    catupiry o incluso banana con canela. Se come en ferias al aire libre, acompañado de caña o jugo.
+                </p>
+                <figure><img src="" alt=""></figure>
+            </article>
+            <article>
+                <h2>Churrasco</h2>
+                <p>Asado brasileño con diferentes cortes de carne vacuna, cerdo o pollo cocinados a la parrilla o
+                    espeto. Se sirve en restaurantes tipo rodizio, donde los mozos traen la carne a la mesa
+                    continuamente.</p>
+                <figure><img src="" alt=""></figure>
+            </article>
+            <article>
+                <h2>Brigadeiro</h2>
+                <p>Postre brasileño clásico: bolitas de chocolate hechas con leche condensada, cacao y manteca,
+                    cubiertas con granas de chocolate. Se comen en cumpleaños, fiestas o como dulce diario.</p>
+                <figure><img src="" alt=""></figure>
+            </article>
+        </section>
+
+        <section>
+            <h1>Bebidas típicas</h1>
+            <p>La gastronomía carioca también incluye una variedad de bebidas refrescantes y tradicionales. Aquí te
+                presentamos algunas de las más populares:</p>
+            <article>
+                <h2>Caipirinha</h2>
+                <p>La caipirinha es el trago nacional de Brasil, conocido por su frescura y sabor cítrico. Se prepara
+                    con cachaça (un destilado de caña de azúcar), lima fresca, azúcar y hielo. Es ideal para climas
+                    cálidos y se sirve en casi todos los bares y restaurantes de Río.</p>
+                <figure><img src="" alt=""></figure>
+            </article>
+            <article>
+                <h2>Guaraná Antárctica</h2>
+                <p>Es una gaseosa brasileña tradicional elaborada a partir del fruto del guaraná, originario de la
+                    Amazonía. Tiene un sabor dulce, ligeramente afrutado y refrescante. Es muy consumida en almuerzos,
+                    meriendas y celebraciones. También se usa como acompañamiento del churrasco.</p>
+                <figure><img src="" alt=""></figure>
+            </article>
+            <article>
+                <h2>Agua de coco</h2>
+                <p>Servida directamente desde el coco verde y bien fría, esta bebida es natural, refrescante y
+                    nutritiva. Es muy común en playas como Copacabana o Ipanema, donde los vendedores ambulantes la
+                    ofrecen recién cortada. Es hidratante y perfecta para combatir el calor de Río.</p>
+                <figure><img src="" alt=""></figure>
+            </article>
+        </section>
+    </div>
+
+    <footer>
+        <div class="container">
+            <figure>
+                <img src="../img/mascara.png" alt="Logo de RioMagico">
+            </figure>
+
+            <div class="redesSociales">
+                <h3>Siguenos</h3>
+                <figure>
+                    <img src="../img/icon/facebook.svg" alt="Icono de Facebook">
+                    <img src="../img/icon/instagram.svg" alt="Icono de Instagram">
+                    <img src="../img/icon/x.svg" alt="Icono de X(ex Twiter)">
+                    <img src="../img/icon/tiktok.svg" alt="Icono de TikTok">
+                </figure>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="info-alumno">
+                <ul>
+                    <li>Apellido y nombre: Tito Valentín</li>
+                    <li>Nombre de la materia: Maquetado y desarrollo web</li>
+                    <li>Docente a cargo: Carlos Ferrer</li>
+                    <li>AVISO: entrega para un TP de primer cuatrimestre de la Escuela Da Vinci con el año actual.</li>
+                </ul>
+            </div>
+        </div>
+
+        <span class="copyright">© 2025 All Rights Reserved Developed by in.</span>
+    </footer>
 </body>
 
 </html>
