Refactor code structure for improved readability and maintainability

--- a/pages/atracciones.html
+++ b/pages/atracciones.html
@@ -80,7 +80,7 @@
                 </p>
             </div>
             <figure>
-                <img src="../img/image/cristo-redentor.webp" alt="Imagen de Cristo Redentor">
+                <img src="../img/vistas/cristo-redentor.webp" alt="Imagen de Cristo Redentor">
             </figure>
         </section>
 
@@ -97,7 +97,7 @@
                 </p>
             </div>
             <figure>
-                <img src="../img/image/parque-nacional-tijuca.webp" alt="Imagen de Parque Nacional Tijuca">
+                <img src="../img/vistas/parque-nacional-tijuca.webp" alt="Imagen de Parque Nacional Tijuca">
             </figure>
         </section>
 
@@ -115,7 +115,7 @@
                 </p>
             </div>
             <figure>
-                <img src="../img/image/museo-do-amanhã.webp" alt="Imagen de Museo do Amanhã">
+                <img src="../img/vistas/museo-do-amanhã.webp" alt="Imagen de Museo do Amanhã">
             </figure>
         </section>
 
@@ -133,7 +133,7 @@
                 </p>
             </div>
             <figure>
-                <img src="../img/image/pan-de-azúcar.webp" alt="Imagen de Pan de Azúcar">
+                <img src="../img/vistas/pan-de-azúcar.webp" alt="Imagen de Pan de Azúcar">
             </figure>
         </section>
 
@@ -149,7 +149,7 @@
                     aire libre o simplemente <strong>relajarse rodeado de vegetación exuberante</strong>.</p>
             </div>
             <figure>
-                <img src="../img/image/parque-lage.webp" alt="Imagen de Parque Lage">
+                <img src="../img/vistas/parque-lage.webp" alt="Imagen de Parque Lage">
             </figure>
         </section>
 
@@ -166,7 +166,7 @@
                 </p>
             </div>
             <figure>
-                <img src="../img/image/vista-chinesa.webp" alt="Imagen de Vista Chinesa">
+                <img src="../img/vistas/vista-chinesa.webp" alt="Imagen de Vista Chinesa">
             </figure>
         </section>
 
@@ -184,7 +184,7 @@
                 </p>
             </div>
             <figure>
-                <img src="../img/image/catedral-metropolitana-de-san-sebastián.webp"
+                <img src="../img/vistas/catedral-metropolitana-de-san-sebastián.webp"
                     alt="Imagen de Catedral Metropolitana de San Sebastián">
             </figure>
         </section>
@@ -201,7 +201,7 @@
                     despejadas.</p>
             </div>
             <figure>
-                <img src="../img/image/mirante-dona-marta.webp" alt="Imagen de Mirante Dona Marta">
+                <img src="../img/vistas/mirante-dona-marta.webp" alt="Imagen de Mirante Dona Marta">
             </figure>
         </section>
 
@@ -217,7 +217,7 @@
                 </p>
             </div>
             <figure>
-                <img src="../img/image/leblon-beach.webp" alt="Imagen de Leblon Beach">
+                <img src="../img/vistas/leblon-beach.webp" alt="Imagen de Leblon Beach">
             </figure>
         </section>
 
@@ -234,7 +234,7 @@
                 </p>
             </div>
             <figure>
-                <img src="../img/image/praia-de-copacabana.webp" alt="Imagen de Praia de Copacabana">
+                <img src="../img/vistas/praia-de-copacabana.webp" alt="Imagen de Praia de Copacabana">
             </figure>
         </section>
     </div>
