Agregar estilos y estructura para artículos en la página "Dónde comer" para mejorar la presentación y la adaptabilidad

--- a/pages/donde_comer.html
+++ b/pages/donde_comer.html
@@ -57,68 +57,97 @@
                 Desde platos tradicionales brasileños hasta opciones internacionales, la ciudad ofrece una amplia
                 variedad de sabores que deleitarán tu paladar.</p>
             <article>
-                <h2>Feijoada</h2>
-                <p>La feijoada es un guiso tradicional hecho con porotos negros, carne de cerdo (como chorizo, costillas
-                    y oreja) y embutidos. Se sirve con arroz blanco, farofa (harina de mandioca tostada), rodajas de
-                    naranja y col rizada salteada. Es uno de los platos más emblemáticos de Brasil.</p>
+                <div class="txt">
+                    <h2>Feijoada</h2>
+                    <p>La feijoada es un guiso tradicional hecho con porotos negros, carne de cerdo (como chorizo,
+                        costillas
+                        y oreja) y embutidos. Se sirve con arroz blanco, farofa (harina de mandioca tostada), rodajas de
+                        naranja y col rizada salteada. Es uno de los platos más emblemáticos de Brasil.</p>
+                </div>
                 <figure><img src="../img/comida/feijoada.webp" alt=""></figure>
             </article>
             <article>
-                <h2>Pão de Queijo</h2>
-                <p>Pequeños pancitos redondos elaborados con almidón de mandioca y mucho queso (generalmente Minas). Son
-                    crocantes por fuera, esponjosos por dentro y muy consumidos en desayunos y meriendas.</p>
+                <div class="txt">
+                    <h2>Pão de Queijo</h2>
+                    <p>Pequeños pancitos redondos elaborados con almidón de mandioca y mucho queso (generalmente Minas).
+                        Son
+                        crocantes por fuera, esponjosos por dentro y muy consumidos en desayunos y meriendas.</p>
+                </div>
                 <figure><img src="../img/comida/pão_de_queijo.webp" alt=""></figure>
             </article>
             <article>
-                <h2>Moqueca</h2>
-                <p>Guiso de pescado o mariscos cocido lentamente con leche de coco, cebolla, morrón, tomate y aceite de
-                    dendê (palma africana). Tiene sabor suave pero exótico. Se sirve caliente con arroz y farofa.</p>
+                <div class="txt">
+                    <h2>Moqueca</h2>
+                    <p>Guiso de pescado o mariscos cocido lentamente con leche de coco, cebolla, morrón, tomate y aceite
+                        de
+                        dendê (palma africana). Tiene sabor suave pero exótico. Se sirve caliente con arroz y farofa.
+                    </p>
+                </div>
                 <figure><img src="../img/comida/moqueca.webp" alt=""></figure>
             </article>
             <article>
-                <h2>Coxinha</h2>
-                <p>Una de las comidas callejeras más populares: masa crocante en forma de gota, rellena con pollo
-                    desmenuzado y condimentos. Se fríe hasta dorar y muchas veces viene con requesón.</p>
+                <div class="txt">
+                    <h2>Coxinha</h2>
+                    <p>Una de las comidas callejeras más populares: masa crocante en forma de gota, rellena con pollo
+                        desmenuzado y condimentos. Se fríe hasta dorar y muchas veces viene con requesón.</p>
+                </div>
                 <figure><img src="../img/comida/coxinha.webp" alt=""></figure>
             </article>
             <article>
-                <h2>Acarajé</h2>
-                <p>Bollo frito hecho con porotos fradinho molidos, relleno con camarones secos, vatapá (puré de pan,
-                    maní y especias) y vinagreta. Típico de la cocina afrobrasileña, muy consumido en ferias y fiestas.
-                </p>
+                <div class="txt">
+                    <h2>Acarajé</h2>
+                    <p>Bollo frito hecho con porotos fradinho molidos, relleno con camarones secos, vatapá (puré de pan,
+                        maní y especias) y vinagreta. Típico de la cocina afrobrasileña, muy consumido en ferias y
+                        fiestas.
+                    </p>
+                </div>
                 <figure><img src="../img/comida/acaraje.webp" alt=""></figure>
             </article>
             <article>
-                <h2>Bolinho de Bacalhau</h2>
-                <p>Croquetas de bacalao salado mezclado con papas y perejil. Se fríen hasta quedar doradas y crujientes.
-                    Se sirven como entrada o en reuniones informales.</p>
+                <div class="txt">
+                    <h2>Bolinho de Bacalhau</h2>
+                    <p>Croquetas de bacalao salado mezclado con papas y perejil. Se fríen hasta quedar doradas y
+                        crujientes.
+                        Se sirven como entrada o en reuniones informales.</p>
+                </div>
                 <figure><img src="../img/comida/bolinho_de_bacalhau.webp" alt=""></figure>
             </article>
             <article>
-                <h2>Tapioca</h2>
-                <p>Tortilla blanca hecha con harina de mandioca hidratada. Se cocina directo en sartén y se rellena con
-                    ingredientes dulces (coco, chocolate, leche condensada) o salados (queso, jamón, pollo). Sin gluten
-                    y muy versátil.</p>
+                <div class="txt">
+                    <h2>Tapioca</h2>
+                    <p>Tortilla blanca hecha con harina de mandioca hidratada. Se cocina directo en sartén y se rellena
+                        con
+                        ingredientes dulces (coco, chocolate, leche condensada) o salados (queso, jamón, pollo). Sin
+                        gluten
+                        y muy versátil.</p>
+                </div>
                 <figure><img src="../img/comida/tapioca.webp" alt=""></figure>
             </article>
             <article>
-                <h2>Pastel de feira</h2>
-                <p>Empanada rectangular y fina frita en aceite, con rellenos variados como carne, queso, pollo con
-                    catupiry o incluso banana con canela. Se come en ferias al aire libre, acompañado de caña o jugo.
-                </p>
+                <div class="txt">
+                    <h2>Pastel de feira</h2>
+                    <p>Empanada rectangular y fina frita en aceite, con rellenos variados como carne, queso, pollo con
+                        catupiry o incluso banana con canela. Se come en ferias al aire libre, acompañado de caña o
+                        jugo.
+                    </p>
+                </div>
                 <figure><img src="../img/comida/Pastel_de_feira.webp" alt=""></figure>
             </article>
             <article>
-                <h2>Churrasco</h2>
-                <p>Asado brasileño con diferentes cortes de carne vacuna, cerdo o pollo cocinados a la parrilla o
-                    espeto. Se sirve en restaurantes tipo rodizio, donde los mozos traen la carne a la mesa
-                    continuamente.</p>
+                <div class="txt">
+                    <h2>Churrasco</h2>
+                    <p>Asado brasileño con diferentes cortes de carne vacuna, cerdo o pollo cocinados a la parrilla o
+                        espeto. Se sirve en restaurantes tipo rodizio, donde los mozos traen la carne a la mesa
+                        continuamente.</p>
+                </div>
                 <figure><img src="../img/comida/churrasco.webp" alt=""></figure>
             </article>
             <article>
-                <h2>Brigadeiro</h2>
-                <p>Postre brasileño clásico: bolitas de chocolate hechas con leche condensada, cacao y manteca,
-                    cubiertas con granas de chocolate. Se comen en cumpleaños, fiestas o como dulce diario.</p>
+                <div class="txt">
+                    <h2>Brigadeiro</h2>
+                    <p>Postre brasileño clásico: bolitas de chocolate hechas con leche condensada, cacao y manteca,
+                        cubiertas con granas de chocolate. Se comen en cumpleaños, fiestas o como dulce diario.</p>
+                </div>
                 <figure><img src="../img/comida/brigadeiros.webp" alt=""></figure>
             </article>
         </section>
@@ -128,24 +157,32 @@
             <p>La gastronomía carioca también incluye una variedad de bebidas refrescantes y tradicionales. Aquí te
                 presentamos algunas de las más populares:</p>
             <article>
-                <h2>Caipirinha</h2>
-                <p>La caipirinha es el trago nacional de Brasil, conocido por su frescura y sabor cítrico. Se prepara
-                    con cachaça (un destilado de caña de azúcar), lima fresca, azúcar y hielo. Es ideal para climas
-                    cálidos y se sirve en casi todos los bares y restaurantes de Río.</p>
+                <div class="txt">
+                    <h2>Caipirinha</h2>
+                    <p>La caipirinha es el trago nacional de Brasil, conocido por su frescura y sabor cítrico. Se
+                        prepara
+                        con cachaça (un destilado de caña de azúcar), lima fresca, azúcar y hielo. Es ideal para climas
+                        cálidos y se sirve en casi todos los bares y restaurantes de Río.</p>
+                </div>
                 <figure><img src="../img/comida/caipirinha.webp" alt=""></figure>
             </article>
             <article>
-                <h2>Guaraná Antárctica</h2>
-                <p>Es una gaseosa brasileña tradicional elaborada a partir del fruto del guaraná, originario de la
-                    Amazonía. Tiene un sabor dulce, ligeramente afrutado y refrescante. Es muy consumida en almuerzos,
-                    meriendas y celebraciones. También se usa como acompañamiento del churrasco.</p>
+                <div class="txt">
+                    <h2>Guaraná Antárctica</h2>
+                    <p>Es una gaseosa brasileña tradicional elaborada a partir del fruto del guaraná, originario de la
+                        Amazonía. Tiene un sabor dulce, ligeramente afrutado y refrescante. Es muy consumida en
+                        almuerzos,
+                        meriendas y celebraciones. También se usa como acompañamiento del churrasco.</p>
+                </div>
                 <figure><img src="../img/comida/guarana_antartica.webp" alt=""></figure>
             </article>
             <article>
-                <h2>Agua de coco</h2>
-                <p>Servida directamente desde el coco verde y bien fría, esta bebida es natural, refrescante y
-                    nutritiva. Es muy común en playas como Copacabana o Ipanema, donde los vendedores ambulantes la
-                    ofrecen recién cortada. Es hidratante y perfecta para combatir el calor de Río.</p>
+                <div class="txt">
+                    <h2>Agua de coco</h2>
+                    <p>Servida directamente desde el coco verde y bien fría, esta bebida es natural, refrescante y
+                        nutritiva. Es muy común en playas como Copacabana o Ipanema, donde los vendedores ambulantes la
+                        ofrecen recién cortada. Es hidratante y perfecta para combatir el calor de Río.</p>
+                </div>
                 <figure><img src="../img/comida/agua_de_coco.webp" alt=""></figure>
             </article>
         </section>
