Refactor code structure for improved readability and maintainability

--- a/pages/donde_alojarse.html
+++ b/pages/donde_alojarse.html
@@ -50,7 +50,67 @@
         </header>
     </div>
 
-    <!-- TODO:Empezar con el contenido de alojamiento -->
+    <div class="container-corto">
+        <main>
+            <h1>Bienvenidos a nuestra guía de alojamiento en Río de Janeiro</h1>
+            <p>En esta sección encontrarás información detallada sobre los mejores lugares para hospedarte en esta vibrante ciudad. Desde hoteles de lujo hasta opciones más económicas, te ayudaremos a encontrar el lugar perfecto para tu estadía.</p>
+        </main>
+
+        <section>
+            <div class="txt">
+                <h2>Fairmont Rio de Janeiro Copacabana</h2>
+                <span>Avenida Atlântica, 4240, Copacabana, Río de Janeiro, CEP 22070-002, Brasil</span>
+                <p>El Fairmont Rio de Janeiro Copacabana es un lujoso hotel frente a la playa que ofrece impresionantes vistas al mar, una piscina en la azotea y un spa de servicio completo. Ideal para quienes buscan una experiencia de alojamiento de alta gama en Río.</p>
+            </div>
+            <figure>
+                <img src="../img/vistas/hoteles/fairmont-rio-de-janeiro-copacabana.webp" alt="">
+            </figure>
+        </section>
+
+        <section>
+            <div class="txt">
+                <h2>Miramar By Windsor Copacabana</h2>
+                <span>Avenida Atlântica, 3668, Copacabana, Río de Janeiro, CEP 22070-001, Brasil</span>
+                <p>El Miramar By Windsor Copacabana es un elegante hotel que combina lujo y comodidad. Ofrece habitaciones modernas, una piscina en la azotea y un restaurante de alta calidad. Perfecto para quienes buscan una experiencia sofisticada en Río.</p>
+            </div>
+            <figure>
+                <img src="../img/vistas/hoteles/miramar-by-windsor-copacabana.webp" alt="">
+            </figure>
+        </section>
+
+        <section>
+            <div class="txt">
+                <h2>Windsor Palace Copacabana</h2>
+                <span>Rua Domingos Ferreira, 6, Copacabana, Río de Janeiro, CEP 22050- 010, Brasil</span>
+                <p>El Windsor Palace Copacabana es un hotel de lujo que ofrece una experiencia única frente al mar. Con una decoración elegante y servicios de alta calidad, es ideal para quienes buscan confort y estilo en su estadía en Río.</p>
+            </div>
+            <figure>
+                <img src="../img/vistas/hoteles/windsor-palace-copacabana.webp" alt="">
+            </figure>
+        </section>
+
+        <section>
+            <div class="txt">
+                <h2>Rio Spot Homes vista praia D047</h2>
+                <span>290 Avenida Atlântica Apt 901, Leme, Río de Janeiro, CEP 22010-000, Brasil</span>
+                <p>Rio Spot Homes vista praia D047 es un acogedor apartamento que ofrece vistas impresionantes de la playa. Ideal para familias o grupos que buscan comodidad y cercanía al mar.</p>
+            </div>
+            <figure>
+                <img src="../img/vistas/hoteles/rio-spot-homes-vista-praia-d047.webp" alt="">
+            </figure>
+        </section>
+
+        <section>
+            <div class="txt">
+                <h2>Encanto da Lagoa</h2>
+                <span>110 Rua Pio Correia Apartamento 202, Río de Janeiro, CEP 22461-240, Brasil</span>
+                <p>Encanto da Lagoa es un encantador apartamento que ofrece una experiencia única en Río de Janeiro. Con una decoración acogedora y todas las comodidades necesarias, es ideal para parejas o viajeros solitarios que buscan un lugar tranquilo para descansar.</p>
+            </div>
+            <figure>
+                <img src="../img/vistas/hoteles/encanto-da-lagoa.webp" alt="">
+            </figure>
+        </section>
+    </div>
 
     <footer>
         <div class="container">
