Agregar descripciones a las imágenes en las secciones de alojamiento y comida para mejorar la accesibilidad y la experiencia del usuario

--- a/pages/donde_alojarse.html
+++ b/pages/donde_alojarse.html
@@ -63,7 +63,7 @@
                 <p>El Fairmont Rio de Janeiro Copacabana es un lujoso hotel frente a la playa que ofrece impresionantes vistas al mar, una piscina en la azotea y un spa de servicio completo. Ideal para quienes buscan una experiencia de alojamiento de alta gama en Río.</p>
             </div>
             <figure>
-                <img src="../img/vistas/hoteles/fairmont-rio-de-janeiro-copacabana.webp" alt="">
+                <img src="../img/vistas/hoteles/fairmont-rio-de-janeiro-copacabana.webp" alt="Fairmont Rio de Janeiro Copacabana, hotel de lujo frente a la playa">
             </figure>
         </section>
 
@@ -74,7 +74,7 @@
                 <p>El Miramar By Windsor Copacabana es un elegante hotel que combina lujo y comodidad. Ofrece habitaciones modernas, una piscina en la azotea y un restaurante de alta calidad. Perfecto para quienes buscan una experiencia sofisticada en Río.</p>
             </div>
             <figure>
-                <img src="../img/vistas/hoteles/miramar-by-windsor-copacabana.webp" alt="">
+                <img src="../img/vistas/hoteles/miramar-by-windsor-copacabana.webp" alt="Miramar By Windsor Copacabana, hotel elegante con piscina en azotea">
             </figure>
         </section>
 
@@ -85,7 +85,7 @@
                 <p>El Windsor Palace Copacabana es un hotel de lujo que ofrece una experiencia única frente al mar. Con una decoración elegante y servicios de alta calidad, es ideal para quienes buscan confort y estilo en su estadía en Río.</p>
             </div>
             <figure>
-                <img src="../img/vistas/hoteles/windsor-palace-copacabana.webp" alt="">
+                <img src="../img/vistas/hoteles/windsor-palace-copacabana.webp" alt="Windsor Palace Copacabana, hotel de lujo con vista al mar">
             </figure>
         </section>
 
@@ -96,7 +96,7 @@
                 <p>Rio Spot Homes vista praia D047 es un acogedor apartamento que ofrece vistas impresionantes de la playa. Ideal para familias o grupos que buscan comodidad y cercanía al mar.</p>
             </div>
             <figure>
-                <img src="../img/vistas/hoteles/rio-spot-homes-vista-praia-d047.webp" alt="">
+                <img src="../img/vistas/hoteles/rio-spot-homes-vista-praia-d047.webp" alt="Rio Spot Homes vista praia D047, apartamento con vista a la playa">
             </figure>
         </section>
 
@@ -107,7 +107,7 @@
                 <p>Encanto da Lagoa es un encantador apartamento que ofrece una experiencia única en Río de Janeiro. Con una decoración acogedora y todas las comodidades necesarias, es ideal para parejas o viajeros solitarios que buscan un lugar tranquilo para descansar.</p>
             </div>
             <figure>
-                <img src="../img/vistas/hoteles/encanto-da-lagoa.webp" alt="">
+                <img src="../img/vistas/hoteles/encanto-da-lagoa.webp" alt="Encanto da Lagoa, apartamento acogedor cerca de la laguna">
             </figure>
         </section>
     </div>
