--- a/pages/donde_comer.html
+++ b/pages/donde_comer.html
@@ -64,7 +64,7 @@
                         y oreja) y embutidos. Se sirve con arroz blanco, farofa (harina de mandioca tostada), rodajas de
                         naranja y col rizada salteada. Es uno de los platos más emblemáticos de Brasil.</p>
                 </div>
-                <figure><img src="../img/comida/feijoada.webp" alt=""></figure>
+                <figure><img src="../img/comida/feijoada.webp" alt="Plato de feijoada brasileña con porotos negros y carne"></figure>
             </article>
             <article>
                 <div class="txt">
@@ -73,7 +73,7 @@
                         Son
                         crocantes por fuera, esponjosos por dentro y muy consumidos en desayunos y meriendas.</p>
                 </div>
-                <figure><img src="../img/comida/pão_de_queijo.webp" alt=""></figure>
+                <figure><img src="../img/comida/pão_de_queijo.webp" alt="Pão de queijo brasileño, pequeños panes de queso"></figure>
             </article>
             <article>
                 <div class="txt">
@@ -83,7 +83,7 @@
                         dendê (palma africana). Tiene sabor suave pero exótico. Se sirve caliente con arroz y farofa.
                     </p>
                 </div>
-                <figure><img src="../img/comida/moqueca.webp" alt=""></figure>
+                <figure><img src="../img/comida/moqueca.webp" alt="Moqueca de pescado con leche de coco en cazuela de barro"></figure>
             </article>
             <article>
                 <div class="txt">
@@ -91,7 +91,7 @@
                     <p>Una de las comidas callejeras más populares: masa crocante en forma de gota, rellena con pollo
                         desmenuzado y condimentos. Se fríe hasta dorar y muchas veces viene con requesón.</p>
                 </div>
-                <figure><img src="../img/comida/coxinha.webp" alt=""></figure>
+                <figure><img src="../img/comida/coxinha.webp" alt="Coxinha, comida callejera brasileña rellena de pollo"></figure>
             </article>
             <article>
                 <div class="txt">
@@ -101,7 +101,7 @@
                         fiestas.
                     </p>
                 </div>
-                <figure><img src="../img/comida/acaraje.webp" alt=""></figure>
+                <figure><img src="../img/comida/acaraje.webp" alt="Acarajé, bollo frito afrobrasileño relleno de camarones"></figure>
             </article>
             <article>
                 <div class="txt">
@@ -110,7 +110,7 @@
                         crujientes.
                         Se sirven como entrada o en reuniones informales.</p>
                 </div>
-                <figure><img src="../img/comida/bolinho_de_bacalhau.webp" alt=""></figure>
+                <figure><img src="../img/comida/bolinho_de_bacalhau.webp" alt="Bolinho de bacalhau, croquetas doradas de bacalao"></figure>
             </article>
             <article>
                 <div class="txt">
@@ -121,7 +121,7 @@
                         gluten
                         y muy versátil.</p>
                 </div>
-                <figure><img src="../img/comida/tapioca.webp" alt=""></figure>
+                <figure><img src="../img/comida/tapioca.webp" alt="Tapioca brasileña rellena, tortilla de harina de mandioca"></figure>
             </article>
             <article>
                 <div class="txt">
@@ -131,7 +131,7 @@
                         jugo.
                     </p>
                 </div>
-                <figure><img src="../img/comida/Pastel_de_feira.webp" alt=""></figure>
+                <figure><img src="../img/comida/Pastel_de_feira.webp" alt="Pastel de feira, empanada brasileña frita rellena"></figure>
             </article>
             <article>
                 <div class="txt">
@@ -140,7 +140,7 @@
                         espeto. Se sirve en restaurantes tipo rodizio, donde los mozos traen la carne a la mesa
                         continuamente.</p>
                 </div>
-                <figure><img src="../img/comida/churrasco.webp" alt=""></figure>
+                <figure><img src="../img/comida/churrasco.webp" alt="Churrasco brasileño, asado de carne a la parrilla"></figure>
             </article>
             <article>
                 <div class="txt">
@@ -148,7 +148,7 @@
                     <p>Postre brasileño clásico: bolitas de chocolate hechas con leche condensada, cacao y manteca,
                         cubiertas con granas de chocolate. Se comen en cumpleaños, fiestas o como dulce diario.</p>
                 </div>
-                <figure><img src="../img/comida/brigadeiros.webp" alt=""></figure>
+                <figure><img src="../img/comida/brigadeiros.webp" alt="Brigadeiros, dulces brasileños de chocolate con granas"></figure>
             </article>
         </section>
 
@@ -164,7 +164,7 @@
                         con cachaça (un destilado de caña de azúcar), lima fresca, azúcar y hielo. Es ideal para climas
                         cálidos y se sirve en casi todos los bares y restaurantes de Río.</p>
                 </div>
-                <figure><img src="../img/comida/caipirinha.webp" alt=""></figure>
+                <figure><img src="../img/comida/caipirinha.webp" alt="Caipirinha, cóctel brasileño con cachaça y lima"></figure>
             </article>
             <article>
                 <div class="txt">
@@ -174,7 +174,7 @@
                         almuerzos,
                         meriendas y celebraciones. También se usa como acompañamiento del churrasco.</p>
                 </div>
-                <figure><img src="../img/comida/guarana_antartica.webp" alt=""></figure>
+                <figure><img src="../img/comida/guarana_antartica.webp" alt="Guaraná Antárctica, gaseosa brasileña de guaraná"></figure>
             </article>
             <article>
                 <div class="txt">
@@ -183,7 +183,7 @@
                         nutritiva. Es muy común en playas como Copacabana o Ipanema, donde los vendedores ambulantes la
                         ofrecen recién cortada. Es hidratante y perfecta para combatir el calor de Río.</p>
                 </div>
-                <figure><img src="../img/comida/agua_de_coco.webp" alt=""></figure>
+                <figure><img src="../img/comida/agua_de_coco.webp" alt="Agua de coco fresca servida en coco verde"></figure>
             </article>
         </section>
     </div>
