--- a/pages/atracciones.html
+++ b/pages/atracciones.html
@@ -43,7 +43,7 @@
                     <li style="--i:1"><a href="atracciones.html">Atracciones</a></li>
                     <li style="--i:2"><a href="donde_comer.html">Dónde comer</a></li>
                     <li style="--i:3"><a href="donde_alojarse.html">Dónde alojarse</a></li>
-                    <li style="--i:4"><a href="#">Blog</a></li>
+                    <li style="--i:4"><a href="blog.html">Blog</a></li>
                     <li style="--i:5"><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
